Final Fix for white space

--- a/src/App.css
+++ b/src/App.css
@@ -4,19 +4,18 @@
   padding: 0;
 }
 
-html {
-  height: 100%;
-}
-
-body {
-  height: 100%;
-}
-
 :root {
   --primary-color: #0f2862;
   --secondary-color: #9e363a;
   --tertiary-color: #091f36;
   --quaternary-color: #4f5f76;
+  height: 100%;
+}
+body {
+  height: 100%;
+}
+
+#root {
   height: 100%;
 }
 
@@ -28,15 +27,15 @@ body {
 .app {
   background-image: url('./images/backdrop.jpg'); /* The image used */
   background-color: #2e0030; /* Used if the image is unavailable */
-  height: 100%;
   width: 100%;
+  height: 100%;
   background-position: center; /* Center the image */
   background-repeat: no-repeat; /* Do not repeat the image */
   background-size: cover;
   display: flex;
   justify-content: center;
   align-items: center;
-  overflow-y: hidden;
+  margin: 0;
 }
 
 .grid {
